# huffman-simple

./: CMakeLists.txt  README.md
samples/: example.cpp
src/: BitReader.cpp  BitWriter.cpp  CodecIOState.cpp  Decoder.cpp  Encoder.cpp  Sorter.cpp  Tree.cpp  huffman_simple.hpp
